--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,6 +71,9 @@ main{
     border: none;
     margin: 20px 10px;
     border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 15px 15px;
     
 
 }
