--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,24 @@
 main{
 
-    max-width: 100%;
-    max-height: 100%;
-    position: relative;
+    /* max-width: 1300px; */
+    /* max-height: 100vh; */
+    /* position: relative; */
     
 
 }
 
 .box{
 
-    margin-left: 7.5%;
-    width: 85%;
+    /* margin-left: 5% */
+    width: 90%;
+    margin-left: 200px;
+    height: 950px; 
     box-sizing: border-box;
-    border: 4px solid black;
-    border-radius: 10px;
-    position: absolute;
-    background: grey;
+    border: none;
+    /* border-radius: 10px; */
+    background: linear-gradient(#a8a4a4,black);
+    /* background-image: linear-gradient(to top, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%); */
+    
 
    
 }
@@ -24,22 +27,23 @@ main{
 
 .levels{
 
-    width: 1080px;
+    width: 1040px;
     margin: 0 auto;
     padding: 50px 0;
     
+
 }
 
 .levels li{
 
     display: inline-block;
     vertical-align: top;
-    background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+    background: rgb(223, 221, 220);
     /* background-image: linear-gradient(to top, #4fb576 0%, #44c489 30%, #28a9ae 46%, #28a2b7 59%, #4c7788 71%, #6c4f63 86%, #432c39 100%); */
     border-radius: 10px;
     text-align: left;
     width: 30%;
-    height: 500px;
+    height: 600px;
     padding: 30px 20px;
     box-sizing: border-box;
     border: none;
@@ -48,14 +52,33 @@ main{
     
     
     
+    
+}
+
+header{
+
+    box-sizing: border-box;
+    /* background: grey; */
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgb(31, 30, 30);
 }
 
 .box h1{
-    padding: 0 50px;
-    margin: 10px 0 0 0;
-    bottom: auto;
     font-size: 40px;
-    
+    margin: 0 0 0 330px;
+    color: white;
+}
+
+header p{
+    text-align: right;
+    margin: 0 20px 0 0;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
     
 }
 
@@ -66,19 +89,74 @@ main{
 }
 
 .type p{
-    background: antiquewhite;
+    background: rgb(235, 226, 226);
     box-sizing: border-box;
     border: none;
     margin: 20px 10px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     font-size: 20px;
     font-weight: bold;
-    padding: 15px 15px;
+    padding: 7px 7px;
     
 
 }
 
+section{
+    box-sizing: border-box;
+    width: 300px;
+    height: 950px;
+    border: none;
+    background: rgb(31, 30, 30);
+    position: absolute;
+    top: 0px;
 
+    
+
+}
+
+section .my_photo{
+    
+    width: 80%; 
+    margin: 10px 25px ;  
+
+
+}
+
+section h3{
+
+    font-size: 20px;
+    margin: 50px 20px;
+    font-weight: bolder;
+    color: white;
+}
+
+section p{
+    font-size: 18px;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    
+}
+
+section h4{
+    margin: 0 15px;
+    font-size: 25px;
+    color: white;
+    
+}
+
+.navigation li{
+
+
+    text-transform: uppercase;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    text-decoration: none;
+    margin: 7px 15px; 
+    /* text-decoration: none; */
+
+}
 
 
 
