--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,3 @@
-main{
-
-    /* max-width: 1300px; */
-    /* max-height: 100vh; */
-    /* position: relative; */
-    
-
-}
 
 .box{
 
@@ -16,7 +8,7 @@ main{
     box-sizing: border-box;
     border: none;
     /* border-radius: 10px; */
-    background: linear-gradient(#a8a4a4,black);
+    background: linear-gradient(rgb(93, 238, 243), rgb(11, 29, 46));
     /* background-image: linear-gradient(to top, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%); */
     
 
@@ -38,63 +30,64 @@ main{
 
     display: inline-block;
     vertical-align: top;
-    background: rgb(223, 221, 220);
-    /* background-image: linear-gradient(to top, #4fb576 0%, #44c489 30%, #28a9ae 46%, #28a2b7 59%, #4c7788 71%, #6c4f63 86%, #432c39 100%); */
+    background: white;
     border-radius: 10px;
     text-align: left;
     width: 30%;
     height: 600px;
     padding: 30px 20px;
     box-sizing: border-box;
-    border: none;
+    border: solid 2px;
     font-size: 18px;
-    margin: 0 1.5%;
-    
-    
-    
-    
+    margin: 0 1.5%; 
 }
+
 
 header{
 
     box-sizing: border-box;
-    /* background: grey; */
-    height: 100px;
+    border-radius: 10px;
+    border:solid 15px ;
+    height: 150px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgb(31, 30, 30);
+    background: linear-gradient(rgb(80, 210, 200));
 }
 
 .box h1{
-    font-size: 40px;
+    font-size: 50px;
     margin: 0 0 0 330px;
-    color: white;
+    color: black;
 }
 
 header p{
     text-align: right;
     margin: 0 20px 0 0;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
-    color: white;
+    color: black;
     
 }
 
 .type h2{
-    font-size: 25px;
+    font-size: 40px;
     margin: 0 0 15px 0;
-   
+    font-weight: bold;
+    text-decoration: underline;
+
 }
 
+
+
 .type p{
-    background: rgb(235, 226, 226);
+    background: rgb(149, 175, 184);
     box-sizing: border-box;
     border: none;
     margin: 20px 10px;
-    /* border-radius: 10px; */
-    font-size: 20px;
+    border-radius: 10px;
+    font-size: 25px;
     font-weight: bold;
     padding: 7px 7px;
     
@@ -103,12 +96,14 @@ header p{
 
 section{
     box-sizing: border-box;
+    border-radius: 10px;
     width: 300px;
     height: 950px;
     border: none;
-    background: rgb(31, 30, 30);
+    background: linear-gradient(rgb(93, 238, 243), rgb(11, 29, 46));
     position: absolute;
     top: 0px;
+    border: solid 15px;
 
     
 
@@ -127,21 +122,21 @@ section h3{
     font-size: 20px;
     margin: 50px 20px;
     font-weight: bolder;
-    color: white;
+    color: black;
 }
 
 section p{
-    font-size: 18px;
-    margin: 0 auto;
+    font-size: 30px;
+    margin: 10px auto;
     text-align: center;
-    color: white;
+    color: black;
     
 }
 
 section h4{
-    margin: 0 15px;
-    font-size: 25px;
-    color: white;
+    margin: 120px 15px 25px 15px;
+    font-size: 40px;
+    color: black;
     
 }
 
@@ -149,17 +144,21 @@ section h4{
 
 
     text-transform: uppercase;
-    color: white;
+    color: black;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 20px;
     text-decoration: none;
     margin: 7px 15px; 
-    /* text-decoration: none; */
+    text-decoration: none;
 
 }
 
 
-
+.fim{
+    color: wheat;
+    margin: 300px auto;
+    font-size: 25px;
+}
 
 
 
