--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,14 @@
 
 .box{
 
-    /* margin-left: 5% */
     width: 90%;
     margin-left: 200px;
     height: 950px; 
     box-sizing: border-box;
     border: none;
     /* border-radius: 10px; */
-    background: linear-gradient(rgb(93, 238, 243), rgb(11, 29, 46));
-    /* background-image: linear-gradient(to top, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%); */
+    background: linear-gradient(rgb(191, 228, 230), rgb(11, 29, 46));
+
     
 
    
@@ -43,11 +42,12 @@
 }
 
 
+
 header{
 
     box-sizing: border-box;
     border-radius: 10px;
-    border:solid 15px ;
+    border:solid 10px whitesmoke;
     height: 150px;
     width: 100%;
     display: flex;
@@ -82,7 +82,7 @@ header p{
 
 
 .type p{
-    background: rgb(149, 175, 184);
+    background: rgb(110, 116, 113);
     box-sizing: border-box;
     border: none;
     margin: 20px 10px;
@@ -100,10 +100,10 @@ section{
     width: 300px;
     height: 950px;
     border: none;
-    background: linear-gradient(rgb(93, 238, 243), rgb(11, 29, 46));
+    background: linear-gradient(rgb(191, 228, 230), rgb(11, 29, 46));
     position: absolute;
     top: 0px;
-    border: solid 15px;
+    border: solid 10px whitesmoke;
 
     
 
@@ -115,6 +115,11 @@ section .my_photo{
     margin: 10px 25px ;  
 
 
+
+}
+
+section .my_photo:hover{
+    opacity: 0.7;
 }
 
 section h3{
@@ -144,13 +149,16 @@ section h4{
 
 
     text-transform: uppercase;
-    color: black;
+    font-size: 25px;
+    text-transform: uppercase;
     font-weight: bold;
-    font-size: 20px;
-    text-decoration: none;
-    margin: 7px 15px; 
-    text-decoration: none;
+    margin-left: 20px;
+    
+}
 
+.navigation li a{
+    color: black;
+    
 }
 
 
